<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context="net.settlepay.MainActivity">

    <Button
        android:id="@+id/webTransactionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web_transaction_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/webTransactionToCardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web_transaction_to_card_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webTransactionWithTokenButton" />

    <Button
        android:id="@+id/webTransactionStatusButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web_transaction_status_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelTransactionButton" />

    <Button
        android:id="@+id/tokenCardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web_transaction_token_card_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webTransactionToCardButton" />

    <TextView
        android:id="@+id/idTransactionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webTransactionStatusButton" />

    <TextView
        android:id="@+id/cardNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTransactionTextView" />

    <TextView
        android:id="@+id/cardTokenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberTextView" />

    <Button
        android:id="@+id/webTransactionWithTokenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web_transaction_with_token_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webTransactionButton" />

    <Button
        android:id="@+id/hostToHostButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/host_transaction_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardTokenTextView" />

    <Button
        android:id="@+id/cancelTransactionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web_transaction_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tokenCardButton" />

    <Button
        android:id="@+id/hostTransactionStatusButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/host_transaction_status_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hostToHostButton" />


</androidx.constraintlayout.widget.ConstraintLayout>